# cernel

./: .buildconfig  .gitignore  CMakeLists.txt  README.md  cernel.hpp
include/: cernel.hpp
test/: CMakeLists.txt
test/src/: basic_test.cpp  freq_loop.cpp  num_threads.cpp  prime_func.hpp  prime_parallel.cpp  prime_serial.cpp
