cmake_minimum_required(VERSION 3.0)
project(cernel_test)

include_directories(../)

add_executable(basic src/basic_test.cpp)
add_executable(num_threads src/num_threads.cpp)
add_executable(prime_parallel src/prime_parallel.cpp)
add_executable(prime_serial src/prime_serial.cpp)
add_executable(freq_loop src/freq_loop.cpp)

if (UNIX)
    target_link_libraries(prime_parallel -lpthread)
    target_link_libraries(basic -lpthread)
endif (UNIX)
if (WIN32)
    target_link_libraries(prime_parallel -static)
    target_link_libraries(prime_serial -static)
    target_link_libraries(basic -static)
    target_link_libraries(num_threads -static)
    target_link_libraries(freq_loop -static)
endif (WIN32)
